[workspace]
resolver = "2"

members = [
    "smooth-operator",
    "smooth-operator-impl",
]

[workspace.package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/heliaxdev/smooth-operator"
version = "0.7.0"
description = "Procedural macro that transforms regular infix arithmetic expressions into checked arithmetic expressions."
keywords = ["checked", "arithmetic", "overflow", "no-panic"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns", "mathematics"]
