[package]
name = "smooth-operator"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
smooth-operator-impl = { version = "0.7", path = "../smooth-operator-impl" }
